[tool.poetry]
name = "pyflink-apps"
version = "0.1.0"
description = "A collection of PyFlink example applications"
authors = ["Diogo"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
apache-flink = ">=1.15,<2.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
pytest = "^7.1.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
